eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Teller_Function__c.object
<CustomObject>
    <fields>
        <fullName>Account_No_Passed_In_Applies_to__c</fullName>
        <label>Account No Passed In Applies to</label>
        <picklist>
            <picklistValues>
                <fullName>Debit Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <label>Charge Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <label>Charge Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Type__c</fullName>
        <label>Cheque Type</label>
        <picklist>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Account_CCY_Label__c</fullName>
        <label>Credit Account CCY Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Account_Label__c</fullName>
        <label>Credit Account Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_System_Parameter__c</fullName>
        <label>Credit System Parameter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Account_CCY_Label__c</fullName>
        <label>Debit Account CCY Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Account_Label__c</fullName>
        <label>Debit Account Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_System_Parameter__c</fullName>
        <label>Debit System Parameter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Credit_Account_Basic_Number__c</fullName>
        <label>Default Credit Account Basic Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Credit_Account_Branch__c</fullName>
        <label>Default Credit Account Branch</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Credit_Account_Currency__c</fullName>
        <label>Default Credit Account Currency</label>
        <picklist>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Credit_Account_Suffix__c</fullName>
        <label>Default Credit Account Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Debit_Account_Basic_Number__c</fullName>
        <label>Default Debit Account Basic Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Debit_Account_Branch__c</fullName>
        <label>Default Debit Account Branch</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Debit_Account_Currency__c</fullName>
        <label>Default Debit Account Currency</label>
        <picklist>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Debit_Account_Suffix__c</fullName>
        <label>Default Debit Account Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depository_Type_Affected__c</fullName>
        <label>Depository Type Affected</label>
        <picklist>
            <picklistValues>
                <fullName>Till</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enable_Credit_Account_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Credit Account No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Debit_Account_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Debit Account No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_My_Credit_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable My Credit Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Account_Function__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Account Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Menu_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Menu Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Teller_Function__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Teller Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Vault_Function__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Vault Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_Logo_CSS__c</fullName>
        <label>Large Logo CSS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandate_Checked_Against__c</fullName>
        <label>Mandate Checked Against</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Menu_Display_Order__c</fullName>
        <label>Menu Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Credit_Accounts_Label__c</fullName>
        <label>My Credit Accounts Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Template__c</fullName>
        <label>Payment Template</label>
        <picklist>
            <picklistValues>
                <fullName>OFCTEMPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHAPSOCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFETEMPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCETEMPL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>OFH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PermissionCategory__c</fullName>
        <label>PermissionCategory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission__c</fullName>
        <label>Permission</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Credit_Account_CCY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Credit Account CCY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Credit_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Credit Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Debit_Account_CCY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Debit Account CCY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Debit_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Debit Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_My_Credit_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show a drop down of all my own accounts that can be credited from the current selected account</description>
        <label>Show My Credit Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_on_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Small_Logo_CSS__c</fullName>
        <label>Small Logo CSS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teller_Function_Root__c</fullName>
        <label>Teller_Function_Root</label>
        <referenceTo>Teller_Function_Root__c</referenceTo>
        <relationshipLabel>Teller Functions</relationshipLabel>
        <relationshipName>Teller_Functions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Teller_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teller Group</label>
        <referenceTo>Teller_Group__c</referenceTo>
        <relationshipLabel>Teller Functions</relationshipLabel>
        <relationshipName>Teller_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Till_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Till Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Type of Transaction. Basically if a till needs to be assigned to the user using the function e.g 
Balance Till - Till 
Cash Deposit - Till 
Account Transfer - Electronic 
Vault Transfer Out - Electronic (User does not need to be assigned to a till/vault) 
Balance Vault - Electronic (User does not need to be assigned to a till/vault) 
Vault Transfer Acceptance - Electronic (User does not need to be assigned to a till/vault)</description>
        <inlineHelpText>Type of Transaction. Basically if a till needs to be assigned to the user using the function e.g
Balance Till - Till
Cash Deposit - Till
Account Transfer - Electronic 
Vault Transfer Out - Electronic (User does not need to be assigned to a till/vault)</inlineHelpText>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Till</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Teller Function</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Teller_Function_Root__c</columns>
        <columns>NAME</columns>
        <columns>Teller_Group__c</columns>
        <columns>Credit_System_Parameter__c</columns>
        <columns>Debit_System_Parameter__c</columns>
        <columns>Permission__c</columns>
        <columns>Is_Account_Function__c</columns>
        <columns>Is_Teller_Function__c</columns>
        <columns>Page__c</columns>
        <columns>Show_on_Menu__c</columns>
        <columns>Depository_Type_Affected__c</columns>
        <columns>Till_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Teller Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Functions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>